Bug 239499 - 64bit safe code for mozilla/content (WinXP AMD64) part 2. r+sr/peterv